sumo/tests/sumo/output/vtypeprobe/errors/file_empty/errors.sumo
Error: Attribute 'file' in definition of vTypeProbe 'test1' is empty.
Quitting (on error).
